--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ div {
   text-align: center;
 }
 
+.navbar {
+  background-color: #ffca83;
+}
+
 .header-div {
   background-image: url("images/coding2.jpg");
 }
@@ -15,7 +19,7 @@ img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
+  width: 250px;
 }
 
 .fa {
