--- a/style.css
+++ b/style.css
@@ -48,3 +48,66 @@ h6 {
 .nav-link {
   color: black !important;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+.bio {
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+}
+
+/* .bio:hover {
+  color: aquamarine;
+} */
+
+.flip-card {
+  background-color: transparent;
+  /* width: 300px; */
+  height: 250px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  /* height: 100%; */
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #545454;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #545454;
+  color: white;
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 100%;
+}
