--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ h6 {
 
 .card-img-top {
   width: 100%;
-  height: 15vw;
-  object-fit: cover;
+  height: 13vw;
+  /* object-fit: cover; */
 }
 
 .bio {
@@ -68,7 +68,7 @@ h6 {
 .flip-card {
   background-color: transparent;
   /* width: 300px; */
-  height: 250px;
+  height: 13vw;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -76,7 +76,7 @@ h6 {
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 13vw;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -92,7 +92,7 @@ h6 {
 .flip-card-back {
   position: absolute;
   width: 100%;
-  /* height: 100%; */
+  height: 13vw;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
