--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ img {
 }
 
 .card {
-  height: 25rem;
+  min-height: 25rem;
+  /* min-height: 200px; */
   background-color: #545454;
 }
 
@@ -52,7 +53,6 @@ h6 {
 .card-img-top {
   width: 100%;
   height: 13vw;
-  /* object-fit: cover; */
 }
 
 .bio {
@@ -61,53 +61,6 @@ h6 {
   justify-content: center;
 }
 
-/* .bio:hover {
-  color: aquamarine;
-} */
-
-.flip-card {
-  background-color: transparent;
-  /* width: 300px; */
-  height: 13vw;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 13vw;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 13vw;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #545454;
-  color: black;
-}
-
-/* Style the back side */
-.flip-card-back {
-  background-color: #545454;
-  color: white;
-  transform: rotateY(180deg);
-  width: 100%;
-  height: 100%;
+.card-body {
+  min-height: 200px;
 }
